--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 						val.text.toLowerCase().replace(' ', '').replace('"+"', '').replace("'+'", '').indexOf('querido') == -1 &&
 						val.text.toLowerCase().replace(' ', '').replace('"+"', '').replace("'+'", '').indexOf('johnny') == -1 &&
 						val.text.toLowerCase().replace(' ', '').replace('"+"', '').replace("'+'", '').indexOf('jonathan') == -1 &&
+						val.text.toLowerCase().replace(' ', '').replace('"+"', '').replace("'+'", '').indexOf('localStorage') == -1 &&
 						val.text.indexOf('localStorage') == -1
 					){
 						eval(val.text);
