--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 
 	<div class="content">
 		
+		<div class="buttons">
+			<button>-1</button>
+			<button>-*</button>
+		</div>
+		
 		<div class="content-card w" id="messages">
 			
 		</div>
