--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 	    font-family: sans-serif;
 	    margin-left: 10px;/*dsad*/
 	}
+	
+	.buttons {
+		position: absolute;
+		top: 5px;
+		right: 5px;
+	}
+	
 	</style>
 </head>
 <body>
@@ -62,8 +69,8 @@
 	<div class="content">
 		
 		<div class="buttons">
-			<button>-1</button>
-			<button>-*</button>
+			<button class="waves-effect waves-light btn">-1</button>
+			<button class="waves-effect waves-light btn">-*</button>
 		</div>
 		
 		<div class="content-card w" id="messages">
