--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 	<div class="content">
 		
 		<div class="buttons">
-			<button class="waves-effect waves-light btn">-1</button>
-			<button class="waves-effect waves-light btn">-*</button>
+			<button class="waves-effect waves-light btn" id="remove-one">-1</button>
+			<button class="waves-effect waves-light btn" id="remove-all">-*</button>
 		</div>
 		
 		<div class="content-card w" id="messages">
