--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
 		top: 5px;
 		right: 5px;
 	}
+	.buttons button {
+		background: none;
+		border: none;
+		color: white;
+	}
+	.buttons button:hover {
+		color: black;
+	}
+	
+	#remove-one {
+		
+	}
 	
 	</style>
 </head>
@@ -69,8 +81,8 @@
 	<div class="content">
 		
 		<div class="buttons">
-			<button class="waves-effect waves-light btn" id="remove-one">-1</button>
-			<button class="waves-effect waves-light btn" id="remove-all">-*</button>
+			<button id="remove-one">-1</button>
+			<button id="remove-all">-*</button>
 		</div>
 		
 		<div class="content-card w" id="messages">
