--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 			$('#remove-one').on('click', function () {});
 			$('#remove-all').on('click', function () {
 				myFire.remove();
+				location.href = location.href;
 			});
 			
 			$('#text').keypress(function (e) {
