--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 		
 		<div class="buttons">
 			<button id="remove-one">-1</button>
+			<button id="remove-scripts">-script</button>
 			<button id="remove-all">-*</button>
 		</div>
 		
