--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				alert("This browser does not support system notifications");
 			else if (permission === "granted")
 				return new Notification(`${title} (${time})`, { body: message });
-			else if (permission !== 'denied')
+			else
 				Notification.requestPermission(function (result) {
 					notify(message, title, result);
 				});
