--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo', 'Zé',
 				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes', 'Virilha',
 				'Meu pai', 'Dona Florinda', 'Danierson', 'Perillo', 'Anakin', 'Silvio Santos',
-				'Politico', 'Japonês', 'Criolo', 'Nazista', 'Judeu', 'He-man'
+				'Politico', 'Japonês', 'Criolo', 'Judeu', 'He-man', 'Snoopy', 'Socialista'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
@@ -133,7 +133,7 @@
 				'orientado à objeto', 'é viadão', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira',
 				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente', 'Furacão', 'Doido',
 				'é rastafári', 'Lula da Silva', 'te comeu?', 'Skywalker', 'Vader', 'da Federal',
-				'boladão', 'corrupto'
+				'Boladão', 'Corrupto', 'Nazista', 'Capitalista', 'Dog'
 			];
 			
 			if(localStorage.getItem('nome_u')){
