--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<!-- RODAPE -->
 	<div class="header">
 		<a href="https://github.com/jonathansantos/chat">
-			<img src="https://lh5.googleusercontent.com/-l9BC0xu8qiw/AAAAAAAAAAI/AAAAAAAACxs/YBcLsRkJxos/s0-c-k-no-ns/photo.jpg" width="64" height="64">
+			<img src="|https://lh5.googleusercontent.com/-l9BC0xu8qiw/AAAAAAAAAAI/AAAAAAAACxs/YBcLsRkJxos/s0-c-k-no-ns/photo.jpg" width="64" height="64">
 		</a>
 		<span>Bradesco</span>
 	</div>
