--- a/index.html
+++ b/index.html
@@ -124,15 +124,16 @@
 				'Allah', 'Maomé', 'Adolf', 'Johnny', 'PH', 'Astronauta', 'Anticristo', 'Zé',
 				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes', 'Virilha',
 				'Meu pai', 'Dona Florinda', 'Danierson', 'Perillo', 'Anakin', 'Silvio Santos',
-				'Politico', 'Japonês', 'Criolo', 'Judeu', 'He-man', 'Snoopy', 'Socialista'
+				'Politico', 'Japonês', 'Criolo', 'Judeu', 'He-man', 'Snoopy', 'Socialista',
+				'Dollyinho', 'Sukita'
 			];
 			var ln = [
-				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air',
-				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado',
+				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air', 'light'
+				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado', 'diet'
 				'orientado à objeto', 'é viadão', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira',
 				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente', 'Furacão', 'Doido',
 				'é rastafári', 'Lula da Silva', 'te comeu?', 'Skywalker', 'Vader', 'da Federal',
-				'Boladão', 'Corrupto', 'Nazista', 'Capitalista', 'Dog'
+				'Boladão', 'Corrupto', 'Nazista', 'Capitalista', 'Dog', 'Guaraná', 'o seu amiguinho'
 			];
 			
 			if(localStorage.getItem('nome_u')){
