--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 			else if (permission === "granted")
 				return new Notification(`${title} (${time})`, { body: message });
 			else{
-				alert("Seu feio."); localStorage['nome_u'] = "Sou Feio";
+				alert("Seu feio.");
+				localStorage['nome_u'] = "Sou Feio";
 			}
 		}
 	
@@ -125,15 +126,16 @@
 				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes', 'Virilha',
 				'Meu pai', 'Dona Florinda', 'Danierson', 'Perillo', 'Anakin', 'Silvio Santos',
 				'Politico', 'Japonês', 'Criolo', 'Judeu', 'He-man', 'Snoopy', 'Socialista',
-				'Dollyinho', 'Sukita'
+				'Dollyinho', 'Sukita', 'Piriquitossauro', 'Pirokaloka'
 			];
 			var ln = [
-				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air', 'light'
-				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado', 'diet'
+				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air', 'light',
+				'que mora logo ali', 'no ar', 'Carrero', 'Tranquilino', 'é um fracassado', 'diet',
 				'orientado à objeto', 'é viadão', 'Rastapé', 'Rousseff', 'Daocu', 'da zoeira',
 				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente', 'Furacão', 'Doido',
 				'é rastafári', 'Lula da Silva', 'te comeu?', 'Skywalker', 'Vader', 'da Federal',
-				'Boladão', 'Corrupto', 'Nazista', 'Capitalista', 'Dog', 'Guaraná', 'o seu amiguinho'
+				'Boladão', 'Corrupto', 'Nazista', 'Capitalista', 'Dog', 'Guaraná', 'o seu amiguinho',
+				'Rex', 'do Tinder'
 			];
 			
 			if(localStorage.getItem('nome_u')){
