--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				'General', 'Cebolanel', 'Palmeiras', 'Faustão', 'Querido', 'Nudes', 'Virilha',
 				'Meu pai', 'Dona Florinda', 'Danierson', 'Perillo', 'Anakin', 'Silvio Santos',
 				'Politico', 'Japonês', 'Criolo', 'Judeu', 'He-man', 'Snoopy', 'Socialista',
-				'Dollyinho', 'Sukita', 'Piriquitossauro', 'Pirokaloka'
+				'Dollyinho', 'Sukita', 'Piriquitossauro', 'Pirokaloka', 'Novinha'
 			];
 			var ln = [
 				'do bonde', 'Escobar', 'Candido Portinari', 'Hard', 'Gay', 'of Bel Air', 'light',
@@ -135,7 +135,7 @@
 				'da Silva', 'não tem mundial', 'no kiyojin', 'do oriente', 'Furacão', 'Doido',
 				'é rastafári', 'Lula da Silva', 'te comeu?', 'Skywalker', 'Vader', 'da Federal',
 				'Boladão', 'Corrupto', 'Nazista', 'Capitalista', 'Dog', 'Guaraná', 'o seu amiguinho',
-				'Rex', 'do Tinder'
+				'Rex', 'do Tinder', 'do baile', 's2', 'pai de família'
 			];
 			
 			if(localStorage.getItem('nome_u')){
