--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
 			if(val.type == 'message'){
 				write('Anonymous - ' + val.text);
+				$('.terminal').animate({ scrollTop: $('.terminal').height() }, 500);
 			}
 			
 				
