--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
 		    if (key === 13 && this.value.trim().length > 1) { 
 		      	var texto = this.value.trim();
 				this.value = '';
-				myFire.push({name: 'Anonymous', time: '', text: texto, color : randomColor(), type : 'message'});
+				var t = (20 + parseInt(Math.random() * 20);
+				
+				if (texto.startWith('<')) {
+					t = 1;
+				}
+				
+				myFire.push({name: 'Anonymous', time: '', text: texto, color : randomColor(), type : 'message', t : t});
 		    }
 
 		});
@@ -117,7 +123,8 @@
 			var val = snapshot.val()
 
 			if(val.type == 'message'){
-				write('Anonymous - ', val.text);
+				var t = val.t;
+				write('Anonymous - ', val.text, t);
 				$('.terminal').animate({ scrollTop: $('.terminal')[0].scrollHeight }, 500);
 			}
 			
