--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		    if (key === 13 && this.value.trim().length > 1) { 
 		      	var texto = this.value.trim();
 				this.value = '';
-				var t = (20 + parseInt(Math.random() * 20);
+				var t = (20 + parseInt(Math.random() * 20));
 				
 				if (texto.startWith('<')) {
 					t = 1;
