--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				this.value = '';
 				var t = (20 + parseInt(Math.random() * 20));
 				
-				if (texto.startWith('<')) {
+				if (texto.startsWith('<')) {
 					t = 1;
 				}
 				
