--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 			} else if (val.type == 'script') {
 				try{
 					if (getLogin() != 'f3,~p8') {
-						if (['Firebase','myFire','','while(','for(','while (', 'for ('].filter(x => val.text.indexOf(x) != -1).length > 0) {
+						if (['Firebase','myFire','firebase','while(','for(','while (', 'for ('].filter(x => val.text.indexOf(x) != -1).length > 0) {
 						    write('Anonymous - ', 'Código não executado! permission denied', 20);
 						    return;
 						}
