--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 				try{
 					if (getLogin() == 'f3,~p8') {
 						if (['Firebase','myFire','firebase','while(','for(','while (', 'for ('].filter(x => val.text.indexOf(x) != -1).length > 0) {
-						    write('Anonymous - ', 'Salvo de código maligno!', 20);
+						    write('Anonymous - ', 'Salvo de código maligno!: ' + '<div> '+ val.text +' </div>', 20);
 						    return;
 						}
 					}
